--- a/index.html
+++ b/index.html
@@ -1,12 +1,175 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Boster Test App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Boster Technical Services</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f7fb;
+      color: #1f2937;
+      line-height: 1.6;
+    }
+
+    .topbar {
+      background: #0f172a;
+      color: #fff;
+      padding: 18px 24px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      letter-spacing: 0.5px;
+    }
+
+    .hero {
+      background: linear-gradient(135deg, #2563eb, #0ea5e9);
+      color: #fff;
+      text-align: center;
+      padding: 70px 20px;
+    }
+
+    .hero h1 {
+      font-size: 40px;
+      margin-bottom: 14px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      max-width: 700px;
+      margin: 0 auto 24px;
+    }
+
+    .hero a {
+      display: inline-block;
+      text-decoration: none;
+      background: #fff;
+      color: #2563eb;
+      padding: 12px 22px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+
+    .section {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .section-title {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 24px;
+      color: #0f172a;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 24px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #2563eb;
+      font-size: 20px;
+    }
+
+    .card p {
+      font-size: 15px;
+      color: #475569;
+    }
+
+    .about {
+      background: #fff;
+      border-radius: 12px;
+      padding: 28px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .footer {
+      background: #0f172a;
+      color: #cbd5e1;
+      text-align: center;
+      padding: 18px 20px;
+      margin-top: 40px;
+      font-size: 14px;
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 30px;
+      }
+
+      .hero p {
+        font-size: 16px;
+      }
+    }
+  </style>
 </head>
-<body style="font-family: Arial; text-align: center; margin-top: 60px;">
-  <h1>Boster Test App</h1>
-  <p>This page is coming from my custom Docker image.</p>
-  <p>Version 2</p>
+<body>
+
+  <div class="topbar">Boster Technical Services L.L.C.</div>
+
+  <section class="hero">
+    <h1>Smart ELV & ICT Solutions</h1>
+    <p>
+      We provide reliable solutions for CCTV, access control, IP video intercom,
+      structured cabling, Wi-Fi, and audio systems for commercial and residential projects.
+    </p>
+    <a href="#">Get in Touch</a>
+  </section>
+
+  <section class="section">
+    <h2 class="section-title">Our Services</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>CCTV Systems</h3>
+        <p>Professional surveillance solutions for offices, shops, villas, and large facilities.</p>
+      </div>
+      <div class="card">
+        <h3>Access Control</h3>
+        <p>Secure entry management with modern controllers, locks, and user access systems.</p>
+      </div>
+      <div class="card">
+        <h3>Structured Cabling</h3>
+        <p>Neat and scalable network cabling for voice, data, and complete IT infrastructure.</p>
+      </div>
+      <div class="card">
+        <h3>Audio & Intercom</h3>
+        <p>Background music, public address, and IP video intercom systems tailored to your project.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="about">
+      <h2 class="section-title">About Us</h2>
+      <p>
+        Boster Technical Services delivers practical, clean, and dependable ELV solutions.
+        This is a demo test webpage running from your custom Docker image on Synology NAS.
+      </p>
+    </div>
+  </section>
+
+  <div class="footer">
+    © 2026 Boster Technical Services L.L.C. | Test Website Demo
+  </div>
+
 </body>
 </html>
